# app/internal/controller/music/response.go
@@ -8,7 +8,14 @@ type BGMs struct {
 }
 
 type BGM struct {
-	BGM ResponseJson `json:"monster"`
+	BGM ResponseJson `json:"bgm"`
+}
+
+type BGMRankings struct {
+	Total   int                   `json:"total,omitempty"`
+	Limit   int                   `json:"limit,omitempty"`
+	Offset  int                   `json:"offset,omitempty"`
+	Ranking []ResponseRankingJson `json:"ranking,omitempty"`
 }
 
 type MessageResponse struct {
@@ -16,7 +23,19 @@ type MessageResponse struct {
 }
 
 type ResponseJson struct {
-	Id   string `json:"monster_id,omitempty"`
+	Id   string `json:"music_id,omitempty"`
 	Name string `json:"name,omitempty"`
 	Url  string `json:"url,omitempty"`
+}
+
+type ResponseRankingJson struct {
+	BgmId   string    `json:"music_id,omitempty"`
+	Name    string    `json:"name,omitempty"`
+	Url     string    `json:"url,omitempty"`
+	Ranking []Ranking `json:"ranking,omitempty"`
+}
+
+type Ranking struct {
+	Ranking  string `json:"ranking,omitempty"`
+	VoteYear string `json:"vote_year,omitempty"`
 }
