# doc/openapi/swagger.json
@@ -223,7 +223,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/music.BGM"
+                            "$ref": "#/definitions/music.BGMRankings"
                         }
                     },
                     "400": {
@@ -496,33 +496,23 @@
                 "summary": "モンスター検索（複数件）",
                 "parameters": [
                     {
+                        "type": "string",
+                        "name": "MonsterIds",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "MonsterName",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "name": "limit",
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "name": "monster_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "name_kana",
-                        "in": "query"
-                    },
-                    {
                         "type": "integer",
                         "name": "offset",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "order",
                         "in": "query"
                     },
                     {
@@ -623,33 +613,23 @@
                 "summary": "モンスター人気投票結果検索",
                 "parameters": [
                     {
+                        "type": "string",
+                        "name": "MonsterIds",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "MonsterName",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "name": "limit",
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "name": "monster_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "name_kana",
-                        "in": "query"
-                    },
-                    {
                         "type": "integer",
                         "name": "offset",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "order",
                         "in": "query"
                     },
                     {
@@ -844,6 +824,17 @@
         }
     },
     "definitions": {
+        "app_internal_controller_music.Ranking": {
+            "type": "object",
+            "properties": {
+                "ranking": {
+                    "type": "string"
+                },
+                "vote_year": {
+                    "type": "string"
+                }
+            }
+        },
         "item.Item": {
             "type": "object",
             "properties": {
@@ -905,6 +896,17 @@
                 }
             }
         },
+        "monster.Location": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "monster.MessageResponse": {
             "type": "object",
             "properties": {
@@ -950,8 +952,14 @@
                 "desc": {
                     "type": "string"
                 },
-                "location": {
+                "first_weak_attack": {
                     "type": "string"
+                },
+                "first_weak_element": {
+                    "type": "string"
+                },
+                "location": {
+                    "$ref": "#/definitions/monster.Location"
                 },
                 "monster_id": {
                     "type": "string"
@@ -959,13 +967,70 @@
                 "name": {
                     "type": "string"
                 },
-                "title": {
+                "second_weak_attack": {
                     "type": "string"
+                },
+                "second_weak_element": {
+                    "type": "string"
+                },
+                "title": {
+                    "$ref": "#/definitions/monster.Title"
                 },
                 "weakness_attack": {
-                    "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/monster.Weakness_attack"
+                    }
                 },
                 "weakness_element": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/monster.Weakness_element"
+                    }
+                }
+            }
+        },
+        "monster.Title": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "monster.Weakness_attack": {
+            "type": "object",
+            "properties": {
+                "blow": {
+                    "type": "string"
+                },
+                "bullet": {
+                    "type": "string"
+                },
+                "slashing": {
+                    "type": "string"
+                }
+            }
+        },
+        "monster.Weakness_element": {
+            "type": "object",
+            "properties": {
+                "dragon": {
+                    "type": "string"
+                },
+                "fire": {
+                    "type": "string"
+                },
+                "ice": {
+                    "type": "string"
+                },
+                "thunder": {
+                    "type": "string"
+                },
+                "water": {
                     "type": "string"
                 }
             }
@@ -973,8 +1038,28 @@
         "music.BGM": {
             "type": "object",
             "properties": {
-                "monster": {
+                "bgm": {
                     "$ref": "#/definitions/music.ResponseJson"
+                }
+            }
+        },
+        "music.BGMRankings": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "ranking": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/music.ResponseRankingJson"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
@@ -1009,11 +1094,31 @@
         "music.ResponseJson": {
             "type": "object",
             "properties": {
-                "monster_id": {
+                "music_id": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "music.ResponseRankingJson": {
+            "type": "object",
+            "properties": {
+                "music_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "ranking": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/app_internal_controller_music.Ranking"
+                    }
                 },
                 "url": {
                     "type": "string"
